force-app/main/default/objects/Issue_Scoring_Settings__c/Issue_Scoring_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Issue Scoring Settings</label>
</CustomObject>