force-app/main/default/objects/Issue_Scoring_Settings__c/fields/Override_Field__c.field-meta.xml
<CustomField>
    <fullName>Override_Field__c</fullName>
    <description>The name of an Issue field that can override the calculated score.</description>
    <inlineHelpText>The name of an Issue field that can override the calculated score.</inlineHelpText>
    <label>Override Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>