force-app/main/default/objects/Issue_Scoring_Settings__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <length>32</length>
    <type>Text</type>
</CustomField>